@@ -1,3 +1,6 @@
+2008-04-02 Allow to use both linestyle definition arguments, '-' and
+           'solid' etc. in plots/collections - MM 
+           
 2008-03-27 Fix saving to Unicode filenames with Agg backend
            (other backends appear to already work...)
            (Thanks, Christopher Barker) - MGD
